# surf

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  go.mod  go.sum
.cargo/: config.toml
.github/workflows/: ci.yml  cli-release-assets.yml  release.yml
cmd/surf/: main.go  main_test.go  session.go  session_e2e_test.go  session_test.go  settings.go  settings_test.go  version.go
crates/surf/: Cargo.toml
crates/surf/src/: browser.rs  cli.rs  constants.rs  extension.rs  host.rs  lib.rs  main.rs  paths.rs  proxy.rs  runtime.rs  session.rs  settings.rs  tunnel.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
docs/: ARCHITECTURE.md  RELEASE.md  RELEASE_RUNBOOK.md  RELEASING.md
docs/releases/: v0.1.1.md
extensions/chrome/: manifest.json  options.html  options.js  popup.html  popup.js  service_worker.js
runtime/browser/: Dockerfile  entrypoint.sh
tools/release/: build-cli-release-asset.sh  build-cli-release-assets.sh  validate-release-version.sh
