[workspace]
members = ["crates/surf", "crates/xtask"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/Aureuma/surf"

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.40", features = ["derive"] }
libc = "0.2.177"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serial_test = "3.2.0"
tempfile = "3.23.0"
toml = "0.9.8"
