[workspace]
members = ["crates/surf", "crates/xtask"]
resolver = "2"

[workspace.package]
version = "0.2.3"
edition = "2024"
license = "MIT"
repository = "https://github.com/Aureuma/surf"
rust-version = "1.94"

[workspace.dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
clap = { version = "4.5.40", features = ["derive"] }
flate2 = "1.1.5"
libc = "0.2.177"
rand = "0.9.2"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serial_test = "3.2.0"
sha2 = "0.10.9"
tempfile = "3.23.0"
tar = "0.4.44"
tiny_http = "0.12.0"
toml = "0.9.8"
tungstenite = { version = "0.28.0", default-features = false, features = ["handshake"] }
url = "2.5.8"
