[package]
name = "surf"
version = "0.1.2"
default-run = "surf"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
libc.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tiny_http.workspace = true
toml.workspace = true
tungstenite.workspace = true
url.workspace = true

[dev-dependencies]
serial_test.workspace = true
